--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
             display: inline-block;
             text-align: center;
         }
+        .gif-wrapper p {
+            position: relative;
+            top: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            margin: 0;
+            padding: 10px;
+            color: black;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 5px;
+            display: inline-block;
+            text-align: center;
+            width: calc(100% - 20px); /* Adjust width to fit within the GIF wrapper */
+            box-sizing: border-box;
+        }
         .arrow {
             font-size: 2em;
             color: #000;
@@ -286,10 +301,64 @@
                     <img src="FIGS/monkey/F.gif" alt="GIF 3">
                 </div>
             </div>
+                <p>
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
+             </div>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <p>
+                    “said person walked over and sit down.”
+                    </p>
+                    <img src="FIGS/sit/F.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                    <p>
+                    “a person swift the upper codre body, and start to
+stretch it.”
+                    </p>
+                    <img src="FIGS/codre/F.gif" alt="GIF 2">
+                </div>
+                <div class="gif-wrapper">
+                    <p>
+                    “the man is dancing on the around .”
+                    </p>
+                    <img src="FIGS/dancing/F.gif" alt="GIF 3">
+                </div>
+             </div>
             <div>
                 <p>
-                    ----------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <p>
+                    “a person jumps repeatedly, waving their hands in circles.”
+                    </p>
+                    <img src="FIGS/circles/F.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                     <p>
+                    “a man does fighting movements kicks in the air punches the air.”
+                    </p>
+                    <img src="FIGS/punches/F.gif" alt="GIF 3">
+                </div>
+                <div class="gif-wrapper">
+                    <p>
+                    “person got down and is crawling across the floor.”
+                    </p>
+                    <img src="FIGS/floor/F.gif" alt="GIF 3">
+                </div>
+                <div class="gif-wrapper">
+                    <p>
+                    “a person holds something above, and swings.”
+                    </p>
+                    <img src="FIGS/swings/F.gif" alt="GIF 3">
+                </div>
+                </div>
+            </div>
         </div>
         <footer>
             &copy; 2024 Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang
