--- a/index.html
+++ b/index.html
@@ -77,20 +77,23 @@
             display: inline-block;
             text-align: center;
         }
+        .gif-wrapper img {
+            width: 150%;
+        }
         .gif-wrapper p {
-            position: relative;
-            top: -30px;
+            position: absolute;
+            bottom: -8px;
             left: 50%;
             transform: translateX(-50%);
             margin: 0;
-            padding: 10px;
-            color: black;
-            background: rgba(255, 255, 255, 0.8);
+            padding: 5px;
+            color: white;
             border-radius: 5px;
-            display: inline-block;
+            width: calc(100% - 20px); 
             text-align: center;
-            width: calc(100% - 20px); /* Adjust width to fit within the GIF wrapper */
-            box-sizing: border-box;
+            font-style: italic;
+             font-size: 10px;
+/* Adjust width to fit within the GIF wrapper */
         }
         .arrow {
             font-size: 2em;
@@ -217,9 +220,8 @@
                 “a person runs and then jumps.”
             </div>
             <div class="text-below">
-                <a href="https://www.youtube.com/shorts/TIvoUjc2v54
-">https://www.youtube.com/shorts/TIvoUjc2v54
-</a>
+                <a href="https://www.youtube.com/shorts/TIvoUjc2v54">https://www.youtube.com/shorts/TIvoUjc2v54</a>
+            </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
                     <img src="FIGS/jumps/T.gif" alt="GIF 1">
@@ -258,13 +260,11 @@
                    ----------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
         </div>
-<div class="text-above">
+        <div class="text-above">
                 “A person is performing a 360-degree spin jump.”
             </div>
             <div class="text-below">
-                <a href="https://www.youtube.com/watch?v=jamxtNEd1iw
-">https://www.youtube.com/watch?v=jamxtNEd1iw
-</a>
+                <a href="https://www.youtube.com/watch?v=jamxtNEd1iw">https://www.youtube.com/watch?v=jamxtNEd1iw</a>
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
@@ -282,13 +282,11 @@
                    ----------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
         </div>
-<div class="text-above">
+        <div class="text-above">
                 “person is acting like a human monkey.”
             </div>
             <div class="text-below">
-                <a href="https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop
-">https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop
-</a>
+                <a href="https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop">https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop</a>
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
@@ -301,11 +299,12 @@
                     <img src="FIGS/monkey/F.gif" alt="GIF 3">
                 </div>
             </div>
+            <div>
                 <p>
                     -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                     -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
-             </div>
+            </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
                     <p>
@@ -315,14 +314,13 @@
                 </div>
                 <div class="gif-wrapper">
                     <p>
-                    “a person swift the upper codre body, and start to
-stretch it.”
+                    “a person swift the upper codre body, and start to stretch it.”
                     </p>
                     <img src="FIGS/codre/F.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
                     <p>
-                    “the man is dancing on the around .”
+                    “the man is dancing around.”
                     </p>
                     <img src="FIGS/dancing/F.gif" alt="GIF 3">
                 </div>
@@ -341,7 +339,7 @@ stretch it.”
                 </div>
                 <div class="gif-wrapper">
                      <p>
-                    “a man does fighting movements kicks in the air punches the air.”
+                    “a man does fighting movements kicks in the air punches the air and stops.”
                     </p>
                     <img src="FIGS/punches/F.gif" alt="GIF 3">
                 </div>
