--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             justify-content: space-around;
             margin-top: 20px;
             position: relative;
+            margin-left: 7px;
+            margin-right: 7px;
         }
         .gif-wrapper {
             position: relative;
@@ -90,7 +92,7 @@
             color: white;
             border-radius: 5px;
             width: calc(100% - 20px); 
-            text-align: center;
+            text-align: center;  
             font-style: italic;
              font-size: 10px;
 /* Adjust width to fit within the GIF wrapper */
@@ -299,23 +301,52 @@
                     <img src="FIGS/monkey/F.gif" alt="GIF 3">
                 </div>
             </div>
+            <div>
+                <p>
+                   ----------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
+             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
                     <p>
                     “said person walked over and sit down.”
                     </p>
-                    <img src="FIGS/sit/F.gif" alt="GIF 1">
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                        <img src="FIGS/sit/v1.gif" alt="GIF 1">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/sit/V2.gif" alt="GIF 3">
+                    </div>
+                    </div>
+                        <img src="FIGS/sit/F.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
                     <p>
                     “a person swift the upper codre body, and start to stretch it.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                        <img src="FIGS/codre/v1.gif" alt="GIF 1">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/codre/V2.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/codre/F.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
                     <p>
                     “the man is dancing around.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                    <img src="FIGS/dancing/V_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/dancing/V_.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/dancing/F.gif" alt="GIF 3">
                 </div>
              </div>
@@ -324,24 +355,68 @@
                     <p>
                     “a person jumps repeatedly, waving their hands in circles.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                    <img src="FIGS/circles/V1_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/circles/V2_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/circles/V3_.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/circles/F.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
                      <p>
                     “a man does fighting movements kicks in the air punches the air and stops.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                    <img src="FIGS/punches/V1_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/punches/V2_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/punches/V3_.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/punches/F.gif" alt="GIF 3">
                 </div>
                 <div class="gif-wrapper">
                     <p>
                     “person got down and is crawling across the floor.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                    <img src="FIGS/floor/V_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/floor/V2_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/floor/V2_.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/floor/F.gif" alt="GIF 3">
                 </div>
                 <div class="gif-wrapper">
                     <p>
                     “a person holds something above, and swings.”
                     </p>
+                    <div class="gif-container">
+                    <div class="gif-wrapper">
+                    <img src="FIGS/swings/V_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/swings/V_.gif" alt="GIF 3">
+                    </div>
+                    <div class="gif-wrapper">
+                    <img src="FIGS/swings/V_.gif" alt="GIF 3">
+                    </div>
+                    </div>
                     <img src="FIGS/swings/F.gif" alt="GIF 3">
                 </div>
                 </div>
