--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </p>
                     <div class="gif-container">
                     <div class="gif-wrapper">
-                        <img src="FIGS/sit/v1.gif" alt="GIF 1">
+                        <img src="FIGS/sit/V1.gif" alt="GIF 1">
                     </div>
                     <div class="gif-wrapper">
                     <img src="FIGS/sit/V2.gif" alt="GIF 3">
@@ -327,7 +327,7 @@
                     </p>
                     <div class="gif-container">
                     <div class="gif-wrapper">
-                        <img src="FIGS/codre/v1.gif" alt="GIF 1">
+                        <img src="FIGS/codre/V1.gif" alt="GIF 1">
                     </div>
                     <div class="gif-wrapper">
                     <img src="FIGS/codre/V2.gif" alt="GIF 3">
