--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Paper Showcase</title>
+    <title>Retrieving Video for Augmented Human Motion Generation</title>
+    <meta name="description" content="Retrieving Video for Augmented Human Motion Generation">
+    <meta name="keywords" content="RV2M, Retrieving Video for Augmented Human Motion Generation, Research Paper, Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang">
     <style>
         body {
             font-family: Arial, sans-serif;
