--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <img src="FIGS/dancing/V_.gif" alt="GIF 3">
                     </div>
                     </div>
-                    <img src="FIGS/dancing/F.gif" alt="GIF 3">
+                    <img src="FIGS/dancing/F1.gif" alt="GIF 3">
                 </div>
              </div>
             <div class="gif-container">
