--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <img src="FIGS/jumps/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/jumps/F.gif" alt="GIF 3">
+                    <img src="FIGS/jumps/F_.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
